--- a/rapport/projet-info-f-302.tex
+++ b/rapport/projet-info-f-302.tex
@@ -22,42 +22,192 @@
 
 \section{Sémantique des variables booléennes}
 
-
+\begin{itemize}
+\item $sur\_voie$ 
+\\
+\\
+La variable booléenne $sur\_voie$
+\item $dans\_gare$
+\\
+\\
+La variable booléenne $dans\_gare$
+\item $fait\_trajet$
+\\
+\\
+La variable booléenne $fait\_trajet$
+\end{itemize}
 
 
 \section{Formules des contraintes}
 
-\subsection{Pour toute paire de gare (g, g'), pour chaque fenêtre horaire de durée TimeWindow,
+\subsection{Contraines explicites}
+\begin{itemize}
+
+
+\item{Pour toute paire de gare (g, g'), pour chaque fenêtre horaire de durée TimeWindow,
 il existe un train qui dessert g dans cette fenêtre, puis, plus tard, ce même train
 desservira g', après une durée de trajet d’au plus TravelDuration.}
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. 
+    \begin{equation*}
+    \begin{split}
+      & 
+      \bigwedge_{(g,g'), g \neq g'} 
+      \bigwedge_{TimeWindow [i_s,i_e]}
+      \bigvee_{i \in [i_s,i_e]}
+      \bigvee_{i < i' \leq min(TimeSlots - 1, i + TravelDuration)}
+      \bigvee_{t}
+      \big[T_{t,i,g,i', g'}] \\
+    \end{split}
+    \end{equation*}
 
-\subsection{Pour prévenir tout risque de collision, une voie de chemin de fer entre deux gares,
+Les Time Windows utilisées sont non-glissantes (elles ne se superposent pas).
+    
+    
+
+\item{Pour prévenir tout risque de collision, une voie de chemin de fer entre deux gares,
 appelé segment, peut accueillir au plus un train.}
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.
+    \begin{equation*}
+    \begin{split}
+      & \bigwedge_{t_1 \neq t_2}
+      \bigwedge_{i}
+      \bigwedge_{(g,g'), g \neq g'} \big[
+      \neg V_{t_1,i,(g,g')} \lor \neg V_{t_2,i,(g,g')} \big] \\
+    \end{split}
+    \end{equation*}
 
-\subsection{Les trains de type slow sont des omnibus : ils sont tenus de s’arrêter dans toutes les
+\item{Les trains de type slow sont des omnibus : ils sont tenus de s’arrêter dans toutes les
 gares. Les trains de type fast ne sont tenus de s’arrêter que dans les gares de type big.}
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+    \begin{equation*}
+    \begin{split}
+      & \bigwedge_{t}
+      \bigwedge_{i}
+      \bigwedge_{(g_1,g_2), (g_2, g_3)}  \big[
+      \neg V_{t,i,(g_1,g_2)} \lor \neg V_{t,i+1,(g_2,g_3)} \lor (Rapide(t) \land Petite(g_2) \big] \\
+    \end{split}
+    \end{equation*}
 
-\subsection{Afin de permettre aux usagers de monter à bord, tout train desservant une gare doit
+\item{Afin de permettre aux usagers de monter à bord, tout train desservant une gare doit
 le faire durant une durée d’au moins TimeWait.}
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.
+    \begin{equation*}
+    \begin{split}
+      & \bigwedge_{t, g, i} \bigwedge_{i+1 \leq i_2<i+TWait} \big[
+      \big(G_{g, t, i-1} \lor \neg G_{g, t, i} \lor G_{g, t, i_2} \big) \\
+    \end{split}
+    \end{equation*}
 
-\subsection{Les trains doivent respecter les temps de trajet prévus par l’infrastructure entre deux
+\item{Les trains doivent respecter les temps de trajet prévus par l’infrastructure entre deux
 gares. On supposera constant, les temps de trajet entre deux gares, ils seront donc donnés en entrée du problème.}
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. 
+    \begin{equation*}
+    \begin{split}
+      & \bigwedge_{(g_1, g_2), t, i} \bigwedge_{i+1<=i_2<i+TravelDuration} \big[ V((g_1, g_2), t, i-1) \lor \neg V((g_1, g_2), t, i) \lor V((g_1, g_2), t, i_2)\big] \\
+    \end{split}
+    \end{equation*}
 
-\subsection{Une gare ne peut accueillir plus de trains que ce que sa capacité le permet.}
+\item{Une gare ne peut accueillir plus de trains que ce que sa capacité le permet.}
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. 
+    \begin{equation*}
+    \begin{split}
+        & \bigwedge_{g, i} \bigwedge_{Ensemble De Trains E \{t_1, t_2, \cdot, t_{cg}, t_{c_g+1}\}} \bigvee_{t \in E} \neg G_{t, g, i}
+    \end{split}
+    \end{equation*}
+\end{itemize}
 
-\section{?Contraintes retirées?}
+\subsection{Contraintes implicites}
+
+\begin{itemize}
+
+\item Tout train doit être quelque part
+
+\begin{equation*}
+    \begin{split}
+      & \bigwedge_{t, i}
+      \big[\bigvee_{g} \big(G_{g, i, t} \big) \lor \bigvee_{(g_1, g_2)} \big(V_{(g_1, g_2) i, t} \big) \big] \\
+    \end{split}
+    \end{equation*}
+
+
+\item Un train ne peut pas être dans 2 gares différentes au même moment
+
+\begin{equation*}
+    \begin{split}
+      & \bigwedge_{g_1, g_2, i>0, t, g_1 \neq g_2 }
+      \big[\neg G_{g_1, i, t} \lor \neg G_{g_2, i, t} \big] \\
+    \end{split}
+    \end{equation*}
+    
+\item Un train ne peut pas être sur 2 segment différents au même moment
+
+\begin{equation*}
+    \begin{split}
+      & \bigwedge_{(g_1, g_2), (g_3, g_4), i>0, t, g_1 \neq g_3, g_2 \neq g_4 }
+      \big[\neg V_{(g_1, g_2), i, t} \lor \neg V_{(g_3, g_4), i, t} \big] \\
+    \end{split}
+    \end{equation*}
+
+\item Un train ne peut pas être sur un segment et une gare au même moment
+
+\begin{equation*}
+    \begin{split}
+      & \bigwedge_{(g_1, (g_2, g_3), i>0, t}
+      \big[\neg G_{g_1, i, t} \lor \neg V_{(g_2, g_3), i, t} \big] \\
+    \end{split}
+    \end{equation*}
+
+
+\item Lorsqu'on sort d'un segment A-B, soit on arrive à gare B soit on est sur un segment B-C
+
+\begin{equation*}
+    \begin{split}
+      & \bigwedge_{(g_1, g_2), t, i}
+      \big[
+      \big(\neg V_{(g_1, g_2), i-1, t} \lor V_{(g_1, g_2), i, t} \big)
+      \lor
+      \big(G_{g_2, t, i} \lor \bigvee_{g_3,\ g_3\ \text{liée à}\ g_2} \big(V_{(g_2, g_3), i, t}\big) \big)
+      \big]
+      \end{split}
+    \end{equation*}
+
+
+\item Lorsqu'un train sort d'une gare A, il doit être sur un segment qui part de A
+
+\begin{equation*}
+    \begin{split}
+      & \bigwedge_{g_1, t, i}
+      \big[
+      \big(\neg G_{g_1, i-1, t} \lor G_{(g_1, i, t} \big)
+      \lor
+      \big(\bigvee_{g_2,\ g_1\ \text{liée à}\ g_2} V_{(g_1, g_2), i, t}\big) 
+      \big]\\
+    \end{split}
+    \end{equation*}
+    
+\item Contraintes supplémentaires afin de rendre la variable booléenne $fait\_trajet$ cohérente
+
+Première partie \\
+\begin{equation*}
+    \begin{split}
+      & \bigwedge_{t, g, g', i, i', g \neq g', i < i'}
+      (\neg T_{t,i,g,i', g'} \lor G_{g, i, t} ) \land (\neg T_{t,i,g,i', g'} \lor  G_{g', i', t} )\\
+    \end{split}
+    \end{equation*}
+
+Deuxième partie \\
+
+\begin{equation*}
+    \begin{split}
+      & \bigwedge_{t, g, g', i, i', g \neq g', i < i'}
+      \neg G_{g, i, t} \lor \neg G_{(g', i', t} \lor T_{t,i,g,i', g'} \\
+    \end{split}
+    \end{equation*}
+
+
+\end{itemize}
+
+%\section{?Contraintes retirées?}
 
 \section{Questions supplémentaires}
 
