--- a/rapport/projet-info-f-302.tex
+++ b/rapport/projet-info-f-302.tex
@@ -248,11 +248,12 @@ Pour modéliser cette contrainte, nous avons besoin de trouver un moyen d'exprim
 \begin{equation*}
     \begin{split}
       & 
-      Chemin_k(t,g_0,i_{0, D},g_k,i_{k, A}) \equiv
+      Chemin_k(g_0,i_{0, D},g_k,i_{k, A}) \equiv
+      \bigvee_{t_0, t_1, ..., t_{k - 1}} 
       \bigvee_{g_1, g_2, ..., g_{k - 1}} 
       \bigvee_{i_{0, D} < i_{1, A} < i_{1, D} < ... < i_{k - 1, A} < i_{k - 1, D} < i_{k, A}} 
       \bigwedge_{0 < j < k - 1}
-      T_{t,g_j,i_{j, D},g_{j + 1},i_{j + 1, A}}
+      T_{t_j,g_j,i_{j, D},g_{j + 1},i_{j + 1, A}}
     \end{split}
 \end{equation*}
 
@@ -267,9 +268,8 @@ Une fois qu'on a cette notion, il est assez facile d'écrire la nouvelle contrai
       \bigwedge_{TimeWindow [i_s,i_e]}
       \bigvee_{i \in [i_s,i_e]}
       \bigvee_{i < i' \leq min(TimeSlots - 1, i + TravelDuration)}
-      \bigvee_{t}
       \bigvee_{1 \leq k \leq 1 + NbChange}
-      Chemin_k(t,g,i,g',i') \\
+      Chemin_k(g,i,g',i') \\
     \end{split}
 \end{equation*}
 
