--- a/rapport/projet-info-f-302.tex
+++ b/rapport/projet-info-f-302.tex
@@ -15,7 +15,7 @@
 \usepackage[colorlinks=true, allcolors=blue]{hyperref}
 
 \title{Projet INFO-F-302 : Gestion des horaires de train}
-\author{MAHIA Jérôme, BONAERT Gregory}
+\author{BONAERT Gregory, MAHIA Jérôme}
 
 \begin{document}
 \maketitle
@@ -23,18 +23,9 @@
 \section{Sémantique des variables booléennes}
 
 \begin{itemize}
-\item $sur\_voie$ 
-\\
-\\
-La variable booléenne $sur\_voie_{t,i,g_{1},g_{2}}$ indique la présence d'un train $t$ au temps $i$ sur la voie reliant les gares $g_{1}$ et $g_{2}$.
-\item $dans\_gare$
-\\
-\\
-La variable booléenne $dans\_gare_{t,i,g}$ indique la présence d'un train $t$ dans une gare $g$ à un instant $i$.
-\item $fait\_trajet$
-\\
-\\
-La variable booléenne $fait\_trajet_{t,i_{1},i_{2},g_{1},g_{2}}$ indique la présence d'un train $t$ à l'instant $i_{1}$ dans la gare $g_{1}$ et à l'instant $i_{2}$ dans la gare $g_{2}$. \\ Elle est équivalente à $dans\_gare_{t,i_{1},g_{1}} \land dans\_gare_{t,i_{2},g_{2}}$.
+\item La variable booléenne $V_{t,i,g_{1},g_{2}}$ indique la présence d'un train $t$ au temps $i$ sur la voie reliant la gares $g_{1}$ à la gare $g_{2}$.
+\item La variable booléenne $G_{t,i,g}$ indique la présence d'un train $t$ dans une gare $g$ à un instant $i$.
+\item La variable booléenne $Tt_{t,i_{1},g_{1},i_{2},g_{2}}$ indique la présence d'un train $t$ à l'instant $i_{1}$ dans la gare $g_{1}$ et à l'instant $i_{2}$ dans la gare $g_{2}$. Elle est équivalente à $G_{t,i_{1},g_{1}} \land G_{t,i_{2},g_{2}}$.
 \end{itemize}
 
 
@@ -61,10 +52,10 @@ desservira g', après une durée de trajet d’au plus TravelDuration.}
       & 
       \bigwedge_{(g,g'), g \neq g'} 
       \bigwedge_{TimeWindow [i_s,i_e]}
-      \bigvee_{i \in [i_s,i_e]}
+      \bigvee_{i_s \leq i \leq i_e}
       \bigvee_{i < i' \leq min(TimeSlots - 1, i + TravelDuration)}
       \bigvee_{t}
-      \big[T_{t,i,g,i', g'}] \\
+      T_{t,i,g,i', g'} \\
     \end{split}
     \end{equation*}
 
@@ -79,7 +70,7 @@ appelé segment, peut accueillir au plus un train.}
     \begin{split}
       & \bigwedge_{t_1 \neq t_2}
       \bigwedge_{i}
-      \bigwedge_{(g,g'), g \neq g'} \big[
+      \bigwedge_{Voie (g,g')} \big[
       \neg V_{t_1,i,(g,g')} \lor \neg V_{t_2,i,(g,g')} \big] \\
     \end{split}
     \end{equation*}
@@ -323,8 +314,5 @@ Ceci est équivalent (en forme normale conjonctive) à
         \neg V_{g_1, g_2, t, i'} \big) \\
     \end{split}
 \end{equation*}
-
-\section{Bonus}
-
 
 \end{document}
